--- a/app/src/main/res/layout/activity_onboard_screen1.xml
+++ b/app/src/main/res/layout/activity_onboard_screen1.xml
@@ -17,7 +17,8 @@
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.347" />
+        app:layout_constraintVertical_bias="0.347"
+        tools:srcCompat="@drawable/frame_2202" />
 
     <ImageView
         android:id="@+id/imageView3"
