--- a/app/src/main/res/layout/activity_onboard_screen3.xml
+++ b/app/src/main/res/layout/activity_onboard_screen3.xml
@@ -49,5 +49,6 @@
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.071" />
+        app:layout_constraintVertical_bias="0.071"
+        tools:srcCompat="@drawable/group_2302" />
 </androidx.constraintlayout.widget.ConstraintLayout>
