--- a/app/src/main/res/drawable/rectangle_3.xml
+++ b/app/src/main/res/drawable/rectangle_3.xml
@@ -13,7 +13,7 @@
             />
         <path
             android:pathData="M0 0V52H167V0"
-            android:fillColor="#4B7BE5"
+            android:fillColor="#803D3B"
             />
     </group>
 </vector>
