--- a/app/src/main/res/layout/activity_onboard_screen3.xml
+++ b/app/src/main/res/layout/activity_onboard_screen3.xml
@@ -33,22 +33,24 @@
         android:id="@+id/imageView11"
         android:layout_width="205dp"
         android:layout_height="48dp"
-        android:layout_marginBottom="60dp"
         android:src="@drawable/getstart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.901"
+        tools:srcCompat="@drawable/getstart" />
 
     <ImageView
         android:id="@+id/imageView10"
         android:layout_width="325dp"
         android:layout_height="398dp"
-        android:src="@drawable/clockaa"
+        android:src="@drawable/group_233"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.071"
-        tools:srcCompat="@drawable/group_2302" />
+         />
 </androidx.constraintlayout.widget.ConstraintLayout>
