--- a/app/src/main/res/drawable/text_box.xml
+++ b/app/src/main/res/drawable/text_box.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
 
             <corners android:radius="8dp"/>
-            <stroke android:color="#31363F" android:width="1.3dp"/>
+            <stroke android:color="#503C3C" android:width="1.3dp"/>
 
 
         </shape>
