--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,11 +53,11 @@
         android:layout_marginTop="25dp"
         android:background="@drawable/text_box"
         android:ems="10"
-        android:hint="  Enter your email"
+        android:hint="Enter your email"
         android:inputType="text"
         android:paddingStart="8dp"
         android:textColor="#413F42"
-        android:textColorHint="#ACB3BF"
+        android:textColorHint="#747264"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,11 +73,11 @@
         android:layout_marginTop="25dp"
         android:background="@drawable/text_box"
         android:ems="10"
-        android:hint="  Enter your password"
+        android:hint="Enter your password"
         android:inputType="text"
         android:paddingStart="8dp"
         android:textColor="#413F42"
-        android:textColorHint="#ACB3BF"
+        android:textColorHint="#747264"
         android:textSize="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -146,7 +146,7 @@
         app:layout_constraintVertical_bias="0.286" />
 
     <TextView
-        android:id="@+id/register"
+        android:id="@+id/registerText"
         android:layout_width="160dp"
         android:layout_height="48dp"
         android:layout_alignParentLeft="true"
@@ -156,7 +156,6 @@
         android:fontFamily="@font/poppins"
         android:gravity="center_horizontal|center_vertical"
         android:text="Register"
-
         android:textAppearance="@style/log_in"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -168,13 +167,14 @@
         app:layout_constraintVertical_bias="0.287" />
 
     <TextView
-        android:id="@+id/loginButton"
+        android:id="@+id/loginText"
         android:layout_width="160dp"
         android:layout_height="48dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
+        android:backgroundTint="#AF8260"
         android:fontFamily="@font/poppins"
         android:gravity="center_horizontal|center_vertical"
         android:text="@string/log_in"
@@ -202,23 +202,23 @@
         app:layout_constraintHorizontal_bias="0.913"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.539" />
+        app:layout_constraintVertical_bias="0.537" />
 
     <Button
-        android:id="@+id/LoginButton"
-        android:layout_width="337dp"
+        android:id="@+id/LoginBtn"
+        android:layout_width="331dp"
         android:layout_height="57dp"
-        android:backgroundTint="#6693F6"
+        android:backgroundTint="#9B4444"
         android:fontFamily="@font/poppins_semibold"
         android:text="Login"
         android:textColor="@color/white"
-        android:textSize="20sp"
+        app:cornerRadius="8sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.445"
+        app:layout_constraintHorizontal_bias="0.433"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.602" />
+        app:layout_constraintTop_toBottomOf="@+id/passowrd"
+        app:layout_constraintVertical_bias="0.099" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
