--- a/app/src/main/res/drawable/border.xml
+++ b/app/src/main/res/drawable/border.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <stroke
         android:width="1dp"
-        android:color="@color/primary"/>
+        android:color="#803D3B"/>
     <corners
         android:radius="8dp"/>
 </shape>
