--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -20,7 +20,7 @@
             android:fontFamily="@font/poppins"
             android:text="Edit Note."
             android:textStyle="bold"
-            android:textColor="@color/red"
+            android:textColor="#153448"
             android:textSize="24sp" />
 
         <EditText
@@ -56,7 +56,7 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="20dp"
             android:clickable="true"
-            android:backgroundTint="@color/pink"
+            android:backgroundTint="#803D3B"
             android:tintMode="@color/white"
             android:src="@drawable/done_icon"
             android:layout_alignParentBottom="true"
