--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,13 +15,15 @@
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="28dp"
-            android:backgroundTint="@color/pink"
+            android:backgroundTint="#803D3B"
             android:clickable="true"
+            app:cornerRadius="8sp"
             android:contentDescription="image"
             android:tintMode="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:srcCompat="@drawable/baseline_add_24" />
+            app:srcCompat="@drawable/baseline_add_24"
+            app:shapeAppearanceOverlay="@style/RoundedFab" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/homeRecyclerView"
@@ -38,7 +40,7 @@
             android:layout_height="match_parent"
             android:id="@+id/emptyNotesImage"
             android:visibility="gone"
-            android:src="@drawable/emptybkg"/>
+            android:src="@drawable/emtyy"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
