--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -30,5 +30,9 @@
         <action
             android:id="@+id/action_editFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <argument
+            android:name="task"
+            app:argType="com.example.focusminder.model.Task"
+            app:nullable="true"/>
     </fragment>
 </navigation>
